Add endpoint /calculateDate.
